--- a/assets/css/design.css
+++ b/assets/css/design.css
@@ -1,110 +1,153 @@
 
 
 
-/* html tags */
-header{
-    background-color: darkgrey;
-    text-align: center;
-    transition: .5s ease;
-    width:100%;
-    height:100px;
-}
-
-header:hover{
-    background-color:grey;
-}
-
-main{
-    background-color:ghostwhite;
-
-}
-
-footer{
-    background-color: darkgrey;
-    text-align: center;
-    transition: .5s ease;
-}
-
-footer:hover{
-    background-color:grey;
-}
-
-
-
-/* classes */
-.navbar{
-    background-color:lightgray !important;
-    width:100%;
-    z-index:2;
-}
-
-.sticky {
-    position: fixed;
-    top: 0;
-    width: 100%
-}
-
-.sticky + main{
-    padding-top: 60px;
-}
-
-.form-control{
-    width: 75%
-}
-
-.arrow{
-    margin-left:7%;
-    margin-bottom:10px;
-    cursor: pointer;
-}
-
-.shop{
-    margin-right:7%;
-    background-color:#dddddd;
-    height:38px;
-}
-
-.row{
-    text-align:center;
-}
-
-.items-container{
-    width:70%;
-    padding-top:15px;
-}
-
-.big{
-    width:100% !important;
-}
-
-.img-fluid{
-    height:100%;
-}
-
-.logo-footer{
-    max-height:90px;
-}
-
-.contact{
-    text-decoration: none;
-    color: white;
-    transition: .5s ease;
-}
-
-.contact:hover{
-    text-decoration: none;
-    color: black;
-}
-
-
-
-/* media queries */
-@media screen and (max-width: 575px) {
-    .only-big{
-        display:none;
+    /* html tags */
+    header{
+        background-color: darkgrey;
+        text-align: center;
+        transition: .5s ease;
+        width:100%;
+        height:100px;
     }
 
-    .home{
-        margin-left: 0;
+    header:hover{
+        background-color:grey;
     }
-}
+
+    main{
+        background-color:ghostwhite;
+
+    }
+
+    footer{
+        background-color: darkgrey;
+        text-align: center;
+        transition: .5s ease;
+    }
+
+    footer:hover{
+        background-color:grey;
+    }
+
+
+
+    /* classes */
+    .navbar{
+        background-color:lightgray !important;
+        width:100%;
+        z-index:2;
+    }
+
+    .sticky {
+        position: fixed;
+        top: 0;
+        width: 100%
+    }
+
+    .sticky + main{
+        padding-top: 60px;
+    }
+
+    .form-control{
+        width: 75%
+    }
+
+    .arrow{
+        margin-left:7%;
+        margin-bottom:10px;
+        cursor: pointer;
+    }
+
+    .shop{
+        margin-right:7%;
+        background-color:#dddddd;
+        height:38px;
+    }
+
+    .row{
+        text-align:center;
+    }
+
+    .items-container{
+        width:70%;
+        padding-top:15px;
+    }
+
+    .big{
+        width:100% !important;
+    }
+
+    .img-fluid{
+        height:100%;
+    }
+
+    .logo-footer{
+        max-height:90px;
+    }
+
+    .contact{
+        text-decoration: none;
+        color: white;
+        transition: .5s ease;
+    }
+
+    .contact:hover{
+        text-decoration: none;
+        color: black;
+    }
+
+    .bordered{
+        border-top: 1px solid black;
+        border-bottom: 1px solid black;
+    }
+
+    .only-small{
+        height:30px;
+    }
+
+
+
+    /*Dropdown controls */
+    .dropdown {
+        position: relative;
+        display: inline-block;
+        cursor: pointer;
+    }
+
+    .dropdown-content {
+        display: none;
+        position: absolute;
+        background-color: #f9f9f9;
+        min-width: 160px;
+        box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+        z-index: 1;
+    }
+
+    .dropdown-content a {
+        color: black;
+        padding: 12px 16px;
+        text-decoration: none;
+        display: block;
+    }
+
+    .dropdown-content a:hover {
+        background-color: #f1f1f1
+    }
+
+    .dropdown:hover .dropdown-content {
+        display: block;
+    }
+    /* Dropdown controls end */
+
+
+
+    /* media queries */
+    @media screen and (max-width: 575px) {
+        .only-big{
+            display:none;
+        }
+
+        .home{
+            margin-left: 0;
+        }
+    }
