--- a/assets/css/design.css
+++ b/assets/css/design.css
@@ -3,7 +3,7 @@
 
     /* html tags */
     header{
-        background-color: darkgrey;
+        background-color: #d9dadb;
         text-align: center;
         transition: .5s ease;
         width:100%;
@@ -11,29 +11,33 @@
     }
 
     header:hover{
-        background-color:grey;
+        background-color:lightgrey;
     }
 
     main{
-        background-color:ghostwhite;
+        background-image: url("../img/back.png");
+    }
 
+    main a{
+        color:red;
     }
 
     footer{
-        background-color: darkgrey;
+        background-color: #d9dadb;
         text-align: center;
         transition: .5s ease;
+         border-top: 1px solid black;
     }
 
     footer:hover{
-        background-color:grey;
+        background-color:lightgrey;
     }
 
 
 
     /* classes */
     .navbar{
-        background-color:lightgray !important;
+        background-color:rgba(0,0,0,.03); !important;
         width:100%;
         z-index:2;
     }
@@ -87,7 +91,7 @@
 
     .contact{
         text-decoration: none;
-        color: white;
+        color: grey;
         transition: .5s ease;
     }
 
@@ -121,6 +125,7 @@
         min-width: 160px;
         box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
         z-index: 1;
+        font-size:15px;
     }
 
     .dropdown-content a {
