--- a/assets/css/design.css
+++ b/assets/css/design.css
@@ -33,7 +33,29 @@
         background-color:lightgrey;
     }
 
+    #admin-container{
+        margin: 0 auto;
+        max-width:300px;
+        min-height:450px;
+        text-align:center;
+        padding:10px;
+    }
 
+    #admin-container input{
+        margin-bottom:20px;
+    }
+
+    select:active, select:hover {
+        outline: none
+    }
+
+    .admin-panel{
+        color:black !important;
+    }
+
+    .admin-button{
+        padding:15px;
+    }
 
     /* classes */
     .navbar{
